adding logistic regression notebook

--- a/course_material/week_7/Probability.ipynb
+++ b/course_material/week_7/Probability.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -145,25 +145,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{2, 4, 6}\n"
+      "{1}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Fraction(1, 2)"
+       "Fraction(1, 6)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "D    = {1, 2, 3, 4, 5, 6}\n",
-    "even = {   2,    4,    6}\n",
-    "print(D & even)\n",
-    "P(even, D)"
+    "space    = {1, 2, 3, 4, 5, 6}\n",
+    "event = {   1}\n",
+    "print(space & event)\n",
+    "P(event, space)"
    ]
   },
   {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -204,15 +204,15 @@
        "Fraction(1, 2)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "even = {2, 4, 6, 8, 10, 12}\n",
+    "event = {2, 4, 6, 8, 10, 12}\n",
     "\n",
-    "P(even, D)"
+    "P(event, space)"
    ]
   },
   {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -314,7 +314,7 @@
        " 'W8'}"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -352,7 +352,7 @@
        "23"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -397,7 +397,7 @@
        "100947"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -447,19 +447,19 @@
     {
      "data": {
       "text/plain": [
-       "['W7 B4 W1 B5 R6 W2',\n",
-       " 'R3 B2 W1 B5 R6 W2',\n",
-       " 'R3 B2 W1 R6 R9 B3',\n",
-       " 'W7 R8 R1 R6 R2 B6',\n",
-       " 'R3 W1 R6 R5 W8 R9',\n",
-       " 'B1 W2 R5 R9 B3 R2',\n",
-       " 'B4 R8 R1 R4 R2 B6',\n",
-       " 'W7 R6 W8 W6 B3 B6',\n",
-       " 'W7 B5 R7 R6 W4 R5',\n",
-       " 'W1 B5 R6 W4 R4 R9']"
+       "['R7 R8 B4 R2 B2 B1',\n",
+       " 'R8 W7 B2 R3 R5 W2',\n",
+       " 'W4 W8 R9 R1 R5 W6',\n",
+       " 'W8 R9 B5 R5 W6 B3',\n",
+       " 'R9 R1 W1 W3 R3 W6',\n",
+       " 'R1 R2 B6 B5 W6 B1',\n",
+       " 'R7 R8 B4 W3 B6 R5',\n",
+       " 'R8 W4 R9 W1 R2 W6',\n",
+       " 'W8 R9 W3 R3 B1 R6',\n",
+       " 'W8 R1 R3 W6 W2 R4']"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {
     "button": false,
     "deletable": true,
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -534,7 +534,7 @@
        "100947"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 19,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -578,16 +578,16 @@
     {
      "data": {
       "text/plain": [
-       "Fraction(4, 4807)"
+       "Fraction(84, 4807)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "red6 = {s for s in U6 if s.count('R') == 6}\n",
+    "red6 = {s for s in U6 if s.count('R') == 5}\n",
     "#print(red6)\n",
     "\n",
     "P(red6, U6)"
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -629,7 +629,7 @@
        "84"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -765,7 +765,7 @@
        "Fraction(240, 4807)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -909,16 +916,56 @@
        "Fraction(350, 4807)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w4 = {s for s in U6 if\n",
-    "      s.count('W') == 4}\n",
+    "w4 = {x for x in U6 if\n",
+    "      x.count('W') == 4}\n",
     "\n",
     "P(w4, U6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.2810484709798216"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(w4)/len(U6)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.2810484709798216"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(P(w4, U6))*100"
    ]
   },
   {
@@ -1274,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 32,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1294,7 +1341,7 @@
        "52"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1355,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Hands) == choose(52, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1325,14 +1392,14 @@
     {
      "data": {
       "text/plain": [
-       "['2H AS 5H 4D KD',\n",
-       " '2S 7D 8H 2C JD',\n",
-       " 'JS 5H 6C 6H 4S',\n",
-       " '2H 7C 3H 3D 7S',\n",
-       " '2H 3C JH 5D 9S']"
+       "['9D 3D 7S 2C 6H',\n",
+       " 'QS KS JC 5D 6H',\n",
+       " '6D JH JD 5C QD',\n",
+       " '9C JD 8D 2C JC',\n",
+       " '3S 6D KH 6H 3C']"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
