--- a/course_material/week_01/hw1_problem_set.ipynb
+++ b/course_material/week_01/hw1_problem_set.ipynb
@@ -22,10 +22,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class object in module builtins:\n",
+      "\n",
+      "class object\n",
+      " |  The base class of the class hierarchy.\n",
+      " |  \n",
+      " |  When called, it accepts no arguments and returns a new featureless\n",
+      " |  instance that has no instance attributes and cannot be given any.\n",
+      " |  \n",
+      " |  Built-in subclasses:\n",
+      " |      async_generator\n",
+      " |      BaseException\n",
+      " |      builtin_function_or_method\n",
+      " |      bytearray\n",
+      " |      ... and 93 other subclasses\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __delattr__(self, name, /)\n",
+      " |      Implement delattr(self, name).\n",
+      " |  \n",
+      " |  __dir__(self, /)\n",
+      " |      Default dir() implementation.\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __format__(self, format_spec, /)\n",
+      " |      Default object formatter.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __hash__(self, /)\n",
+      " |      Return hash(self).\n",
+      " |  \n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __reduce__(self, /)\n",
+      " |      Helper for pickle.\n",
+      " |  \n",
+      " |  __reduce_ex__(self, protocol, /)\n",
+      " |      Helper for pickle.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __setattr__(self, name, value, /)\n",
+      " |      Implement setattr(self, name, value).\n",
+      " |  \n",
+      " |  __sizeof__(self, /)\n",
+      " |      Size of object in memory, in bytes.\n",
+      " |  \n",
+      " |  __str__(self, /)\n",
+      " |      Return str(self).\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Class methods defined here:\n",
+      " |  \n",
+      " |  __init_subclass__(...) from builtins.type\n",
+      " |      This method is called when a class is subclassed.\n",
+      " |      \n",
+      " |      The default implementation does nothing. It may be\n",
+      " |      overridden to extend subclasses.\n",
+      " |  \n",
+      " |  __subclasshook__(...) from builtins.type\n",
+      " |      Abstract classes can override this to customize issubclass().\n",
+      " |      \n",
+      " |      This is invoked early on by abc.ABCMeta.__subclasscheck__().\n",
+      " |      It should return True, False or NotImplemented.  If it returns\n",
+      " |      NotImplemented, the normal algorithm is used.  Otherwise, it\n",
+      " |      overrides the normal algorithm (and the outcome is cached).\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __class__ = <class 'type'>\n",
+      " |      type(object_or_name, bases, dict)\n",
+      " |      type(object) -> the object's type\n",
+      " |      type(name, bases, dict) -> a new type\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(object)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,15 +457,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-47df514039ea>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-6-47df514039ea>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-47df514039ea>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    2cars = ('Ferarri', 'Mustang')\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-47df514039ea>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    2cars = ('Ferarri', 'Mustang')\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -379,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,8 +590,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -492,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,11 +628,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_favorite_cars = ['Chiefs', 'Cardinals', 'Blues', 'Lakers','Manchester United', 'Couch Surfing']"
+    "my_favorite_teams= ['Chiefs', 'Cardinals', 'Blues', 'Lakers','Manchester United', 'Couch Surfing']"
    ]
   },
   {
@@ -573,12 +686,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "irreversible = \"Can you reverse me?\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
