hide example api key and only print first 5 characters

--- a/course_material/week_05/weather_api.ipynb
+++ b/course_material/week_05/weather_api.ipynb
@@ -20,23 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "48c662d8e2fbc87db3c1601e94215d84\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from api_keys import api_key\n",
     "\n",
     "# you imported a variable name api_key\n",
     "# keys should be kept safe! \n",
-    "print(api_key)"
+    "if api_key:\n",
+    "    print(f'API key present! The first 5 characters are: {api_key[:5]}')"
    ]
   },
   {
@@ -196,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
