update week 5 homework links

--- a/course_material/week_05/weather_api.ipynb
+++ b/course_material/week_05/weather_api.ipynb
@@ -47,7 +47,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Anatomy of a URL](https://doepud.co.uk/blog/anatomy-of-a-url)"
+    "[What is a URL](https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_is_a_URL)\n",
+    "\n",
+    "[Anatomy of a URL](https://websitebuilders.com/how-to/web-at-a-glance/url-anatomy/)"
    ]
   },
   {
