--- a/course_material/week_05/weather_api.ipynb
+++ b/course_material/week_05/weather_api.ipynb
@@ -39,15 +39,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "48c662d8e2fbc87db3c1601e94215d84\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from api_keys import api_key\n",
     "\n",
@@ -180,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"coord\":{\"lon\":-80.19,\"lat\":25.77},\"weather\":[{\"id\":803,\"main\":\"Clouds\",\"description\":\"broken clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":88.3,\"feels_like\":91.44,\"temp_min\":86,\"temp_max\":90,\"pressure\":1012,\"humidity\":62},\"visibility\":10000,\"wind\":{\"speed\":11.41,\"deg\":150},\"clouds\":{\"all\":75},\"dt\":1600377029,\"sys\":{\"type\":1,\"id\":4896,\"country\":\"US\",\"sunrise\":1600340857,\"sunset\":1600384962},\"timezone\":-14400,\"id\":4164138,\"name\":\"Miami\",\"cod\":200}\n"
+      "{\"coord\":{\"lon\":-80.19,\"lat\":25.77},\"weather\":[{\"id\":803,\"main\":\"Clouds\",\"description\":\"broken clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":88.09,\"feels_like\":90.79,\"temp_min\":87.01,\"temp_max\":90,\"pressure\":1011,\"humidity\":66},\"visibility\":10000,\"wind\":{\"speed\":13.87,\"deg\":170,\"gust\":19.46},\"clouds\":{\"all\":75},\"dt\":1600378377,\"sys\":{\"type\":1,\"id\":4896,\"country\":\"US\",\"sunrise\":1600340857,\"sunset\":1600384962},\"timezone\":-14400,\"id\":4164138,\"name\":\"Miami\",\"cod\":200}\n"
      ]
     }
    ],
@@ -209,7 +201,7 @@
      "output_type": "stream",
      "text": [
       "<class 'dict'>\n",
-      "{'coord': {'lon': -80.19, 'lat': 25.77}, 'weather': [{'id': 803, 'main': 'Clouds', 'description': 'broken clouds', 'icon': '04d'}], 'base': 'stations', 'main': {'temp': 88.3, 'feels_like': 91.44, 'temp_min': 86, 'temp_max': 90, 'pressure': 1012, 'humidity': 62}, 'visibility': 10000, 'wind': {'speed': 11.41, 'deg': 150}, 'clouds': {'all': 75}, 'dt': 1600377029, 'sys': {'type': 1, 'id': 4896, 'country': 'US', 'sunrise': 1600340857, 'sunset': 1600384962}, 'timezone': -14400, 'id': 4164138, 'name': 'Miami', 'cod': 200}\n"
+      "{'coord': {'lon': -80.19, 'lat': 25.77}, 'weather': [{'id': 803, 'main': 'Clouds', 'description': 'broken clouds', 'icon': '04d'}], 'base': 'stations', 'main': {'temp': 88.09, 'feels_like': 90.79, 'temp_min': 87.01, 'temp_max': 90, 'pressure': 1011, 'humidity': 66}, 'visibility': 10000, 'wind': {'speed': 13.87, 'deg': 170, 'gust': 19.46}, 'clouds': {'all': 75}, 'dt': 1600378377, 'sys': {'type': 1, 'id': 4896, 'country': 'US', 'sunrise': 1600340857, 'sunset': 1600384962}, 'timezone': -14400, 'id': 4164138, 'name': 'Miami', 'cod': 200}\n"
      ]
     }
    ],
@@ -236,14 +228,14 @@
       " 'clouds': {'all': 75},\n",
       " 'cod': 200,\n",
       " 'coord': {'lat': 25.77, 'lon': -80.19},\n",
-      " 'dt': 1600377029,\n",
+      " 'dt': 1600378377,\n",
       " 'id': 4164138,\n",
-      " 'main': {'feels_like': 91.44,\n",
-      "          'humidity': 62,\n",
-      "          'pressure': 1012,\n",
-      "          'temp': 88.3,\n",
+      " 'main': {'feels_like': 90.79,\n",
+      "          'humidity': 66,\n",
+      "          'pressure': 1011,\n",
+      "          'temp': 88.09,\n",
       "          'temp_max': 90,\n",
-      "          'temp_min': 86},\n",
+      "          'temp_min': 87.01},\n",
       " 'name': 'Miami',\n",
       " 'sys': {'country': 'US',\n",
       "         'id': 4896,\n",
@@ -256,7 +248,7 @@
       "              'icon': '04d',\n",
       "              'id': 803,\n",
       "              'main': 'Clouds'}],\n",
-      " 'wind': {'deg': 150, 'speed': 11.41}}\n"
+      " 'wind': {'deg': 170, 'gust': 19.46, 'speed': 13.87}}\n"
      ]
     }
    ],
@@ -277,7 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1012\n"
+      "1011\n"
      ]
     }
    ],
@@ -332,8 +324,8 @@
      "output_type": "stream",
      "text": [
       "{'city': ['Denver', 'Miami', 'Phoenix'],\n",
-      " 'humidity': [9, 62, 9],\n",
-      " 'pressure': [1024, 1012, 1012]}\n"
+      " 'humidity': [9, 66, 8],\n",
+      " 'pressure': [1024, 1011, 1011]}\n"
      ]
     },
     {
@@ -372,14 +364,14 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Miami</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1012</td>\n",
+       "      <td>66</td>\n",
+       "      <td>1011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Phoenix</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1012</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1011</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -388,8 +380,8 @@
       "text/plain": [
        "      city  humidity  pressure\n",
        "0   Denver         9      1024\n",
-       "1    Miami        62      1012\n",
-       "2  Phoenix         9      1012"
+       "1    Miami        66      1011\n",
+       "2  Phoenix         8      1011"
       ]
      },
      "execution_count": 9,
@@ -434,6 +426,38 @@
     "weather_df = pd.DataFrame.from_dict(city_weather)\n",
     "weather_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bonus A'Biel's Question\n",
+    "What does the webiste of an API look like? \n",
+    "\n",
+    "You will get data back but not in HTML format\n",
+    "\n",
+    "Replace the `<API_KEY>` with your api_key and visit the site. Remove the `<>` too! \n",
+    "\n",
+    "Depending on your browser you should see json data.\n",
+    "\n",
+    "Don't try to click this lik without editing the API key. It won't work. Copy and edit in your browser.\n",
+    "\n",
+    "`http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=<API_KEY>&q=phoenix`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
